# WizScribe

./: .gitignore  .prettierrc  CLAUDE.md  PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
scripts/: setup-whisper.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  audio.rs  config.rs  db.rs  dual_audio.rs  lib.rs  main.rs  whisper.rs
src/lib/: api.ts
src/lib/components/: AIChat.svelte  AudioPlayer.svelte  MeetingList.svelte  NoteEditor.svelte  RecordingControls.svelte  TranscriptViewer.svelte
src/lib/stores/: index.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
src/routes/meeting/[id]/: +page.svelte
src/routes/settings/: +page.svelte
