[package]
name = "wizscribe"
version = "0.1.0"
description = "AI Meeting Notes App"
authors = ["WizScribe Team"]
edition = "2021"

[lib]
name = "wizscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
whisper-rs = { version = "0.14" }
anyhow = "1"
thiserror = "2"
dirs = "5"
tempfile = "3"
walkdir = "2"
regex = "1"
cpal = "0.15"
hound = "3"
rubato = "0.14"
crossbeam-channel = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
